<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            android:layout_width="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:fontFamily="@font/lato"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:fontFamily="@font/lato"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration_date"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:id="@+id/reg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:fontFamily="@font/lato"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="@dimen/text_size_default"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/light_ash"
                        android:textColor="@color/light_ash"
                        android:text="@string/random_text_here"
                        android:fontFamily="@font/lato"
                        android:textSize="@dimen/text_size_default"
                        tools:layout_editor_absoluteX="12dp"
                        tools:layout_editor_absoluteY="46dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.facebook.shimmer.ShimmerFrameLayout>